--- a/package.json
+++ b/package.json
@@ -64,7 +64,8 @@
     "tailwind-merge": "^2.5.4",
     "uploadthing": "^7.3.0",
     "vaul": "^1.1.2",
-    "zod": "^3.25.76"
+    "zod": "^3.25.76",
+    "zustand": "^5.0.8"
   },
   "devDependencies": {
     "@types/node": "^22.10.2",
