--- a/package.json
+++ b/package.json
@@ -11,7 +11,9 @@
     "db:studio": "dotenv -e .env.local -- drizzle-kit studio",
     "db:generate": "dotenv -e .env.local -- drizzle-kit generate",
     "db:check": "dotenv -e .env.local -- drizzle-kit check",
-    "type-check": "tsc --noEmit --skipLibCheck"
+    "type-check": "tsc --noEmit --skipLibCheck",
+    "knip": "knip",
+    "prepare": "husky"
   },
   "dependencies": {
     "@clerk/nextjs": "^6.35.2",
@@ -47,9 +49,7 @@
     "@uploadthing/react": "^7.3.0",
     "clsx": "^2.1.1",
     "cmdk": "^1.1.1",
-    "date-fns": "^4.1.0",
     "drizzle-orm": "^0.36.4",
-    "drizzle-zod": "^0.8.3",
     "embla-carousel-react": "^8.6.0",
     "input-otp": "^1.4.2",
     "lucide-react": "^0.468.0",
@@ -79,6 +79,9 @@
     "drizzle-kit": "^0.31.7",
     "eslint": "^9.17.0",
     "eslint-config-next": "^16.0.0",
+    "husky": "^9.1.7",
+    "knip": "^5.70.1",
+    "lint-staged": "^16.2.7",
     "postcss": "^8.4.49",
     "tailwindcss": "^3.4.17",
     "tailwindcss-animate": "^1.0.7",
