--- a/package.json
+++ b/package.json
@@ -62,6 +62,7 @@
     "@uploadthing/react": "^7.3.0",
     "clsx": "^2.1.1",
     "cmdk": "^1.1.1",
+    "date-fns": "^4.1.0",
     "drizzle-orm": "^0.36.4",
     "embla-carousel-react": "^8.6.0",
     "inngest": "^3.46.0",
@@ -69,6 +70,7 @@
     "lucide-react": "^0.468.0",
     "next": "^16.0.3",
     "next-themes": "^0.4.6",
+    "openai": "^6.9.1",
     "react": "^19.0.0",
     "react-day-picker": "^9.11.1",
     "react-dom": "^19.0.0",
@@ -79,6 +81,7 @@
     "tailwind-merge": "^2.5.4",
     "uploadthing": "^7.3.0",
     "vaul": "^1.1.2",
+    "xlsx": "^0.18.5",
     "zod": "^3.25.76",
     "zustand": "^5.0.8"
   },
