--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "scripts": {
     "dev": "next dev",
+    "inngest": "npx inngest-cli@latest dev",
     "dev:inngest": "npx inngest-cli@latest dev",
     "dev:vercel": "vercel dev",
     "build": "next build",
