feat: improve AI structured outputs and tool calling
- Update OpenAI provider to use zodResponseFormat with strict mode
- Update Gemini provider to use responseSchema for structured outputs
- Add proper TypeScript types for multimodal inputs
- Configure knip for dead code detection
- Add missing dependencies (dotenv, @vitest/coverage-v8)
- Improve receipt extraction with better schema enforcement

--- a/package.json
+++ b/package.json
@@ -20,6 +20,8 @@
     "test:logging": "tsx scripts/test-logging.ts",
     "migrate:receipts": "dotenv -e .env.local -- tsx scripts/migrate-receipts-to-documents.ts",
     "seed:categories": "dotenv -e .env.local -- tsx scripts/seed-categories.ts",
+    "reset:documents": "dotenv -e .env.local -- tsx scripts/reset-documents.ts",
+    "delete:uploadthing": "dotenv -e .env.local -- tsx scripts/delete-uploadthing-files.ts",
     "test": "vitest",
     "test:ui": "vitest --ui",
     "test:watch": "vitest --watch",
@@ -85,6 +87,7 @@
     "vaul": "^1.1.2",
     "xlsx": "^0.18.5",
     "zod": "^3.25.76",
+    "zod-to-json-schema": "^3.25.0",
     "zustand": "^5.0.8"
   },
   "devDependencies": {
@@ -113,7 +116,9 @@
     "tailwindcss-animate": "^1.0.7",
     "tsx": "^4.20.6",
     "typescript": "^5.7.2",
-    "vitest": "^4.0.13"
+    "vitest": "^4.0.13",
+    "@vitest/coverage-v8": "^4.0.13",
+    "dotenv": "^16.4.7"
   },
   "overrides": {
     "serialize-error-cjs": "^0.2.0"
