--- a/package.json
+++ b/package.json
@@ -100,9 +100,11 @@
     "@types/react-dom": "^19.0.2",
     "@vercel/postgres": "^0.9.0",
     "@vitejs/plugin-react": "^5.1.1",
+    "@vitest/coverage-v8": "^4.0.13",
     "@vitest/ui": "^4.0.13",
     "autoprefixer": "^10.4.22",
     "class-variance-authority": "^0.7.1",
+    "dotenv": "^16.4.7",
     "dotenv-cli": "^7.4.2",
     "drizzle-kit": "^0.31.7",
     "eslint": "^9.17.0",
@@ -116,9 +118,7 @@
     "tailwindcss-animate": "^1.0.7",
     "tsx": "^4.20.6",
     "typescript": "^5.7.2",
-    "vitest": "^4.0.13",
-    "@vitest/coverage-v8": "^4.0.13",
-    "dotenv": "^16.4.7"
+    "vitest": "^4.0.13"
   },
   "overrides": {
     "serialize-error-cjs": "^0.2.0"
