Add combined wipe script and simplify cleanup commands
- Add scripts/wipe-all.ts - combined DB + UploadThing cleanup
- Rename scripts in package.json:
  - wipe: Full wipe (DB + files)
  - wipe:db: Database only
  - wipe:files: UploadThing only

Usage: npm run wipe -- --confirm

--- a/package.json
+++ b/package.json
@@ -20,8 +20,9 @@
     "test:logging": "tsx scripts/test-logging.ts",
     "migrate:receipts": "dotenv -e .env.local -- tsx scripts/migrate-receipts-to-documents.ts",
     "seed:categories": "dotenv -e .env.local -- tsx scripts/seed-categories.ts",
-    "reset:documents": "dotenv -e .env.local -- tsx scripts/reset-documents.ts",
-    "delete:uploadthing": "dotenv -e .env.local -- tsx scripts/delete-uploadthing-files.ts",
+    "wipe": "dotenv -e .env.local -- tsx scripts/wipe-all.ts",
+    "wipe:db": "dotenv -e .env.local -- tsx scripts/reset-documents.ts",
+    "wipe:files": "dotenv -e .env.local -- tsx scripts/delete-uploadthing-files.ts",
     "test": "vitest",
     "test:ui": "vitest --ui",
     "test:watch": "vitest --watch",
