--- a/package.json
+++ b/package.json
@@ -86,6 +86,7 @@
     "react-resizable-panels": "^3.0.6",
     "recharts": "^2.15.4",
     "sonner": "^1.7.4",
+    "stripe": "^16.12.0",
     "tailwind-merge": "^2.5.4",
     "unpdf": "^1.4.0",
     "uploadthing": "^7.3.0",
